cicd/hello-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: example
  labels:
    env: test
