cicd/hello-v1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service-v1
  namespace: example
spec:
  type: ClusterIP
  selector:
    name: my-app-v1
  ports:
    - port: 80
      targetPort: 8080
