cicd/hello-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deployment-v1
  namespace: example
  labels:
    track: canary
spec:
  selector:
    matchLabels:
      name: my-app-v1
  template:
    metadata:
      namespace: example
      labels:
        name: my-app-v1
    spec:
      containers:
        - name: hello-v1
          image: ghcr.io/learnk8s/app:1.0.0
          resources:
            requests:
              memory: "64Mi"
              cpu: "200m"
            limits:
              memory: "128Mi"
              cpu: "300m"
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: my-service-v1
  namespace: example
spec:
  type: ClusterIP
  selector:
    name: my-app-v1
  ports:
    - port: 80
      targetPort: 8080
